--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,16 @@
-.App {
-  text-align: center;
+.sidebar{
+  background-color: #1f2837;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card {
+	
+	background: #000;
+}
+.card .overlay {
+	background: linear-gradient(
+		120.55deg,
+		rgba(39, 39, 39, 0.38) 0%,
+		rgba(39, 39, 39, 0.2394) 100%
+	);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
